      clearer in which mode you are. This means, that while 'more' is the new
      default, you have to explicitly close the output window with Esc or 'q'. This
      has the advantage that you never have to guess if the next key like 'j' is
      sent to the output window or to the page in case you are at the end of the output.
      Therefore, also the 'more' option has been removed.
    * Vimperator's command line is now a fully supported toolbar. This means you
      can just right click it, select "Customize", and drag'n drop any
      items in the command line like the combined back/forward button and
      get rid of the default address bar. Thanks caisui for the patch!
    * Boolean options can now also be set with :set option=true/false
    * Error messages have more consistent wording now, also got rid of Exxx error
      codes, as we never supported those in the help files anyway.
    * Vimperator works around Firefox's tab scrolling now. So the minimum
      tab width is now just 16px anymore, and you are much more unlikely to
      see scrollbars in the tab bar.
    * No longer show the command after executing an ex command. Just
      fade out quickly now and make room for the status items.
    * Add 'apptab' option for pin/unpin the current tab.
    * Add 'messagetimeout' option to automatically hide messages after a timeout
    * :tabclose! behavior is changed: Instead of focusing left tab, force closing
      of a tab - even if it is an AppTab.
    * Bug fixes

2011-03-06:
    * version 3.0
    * IMPORTANT: The statusbar and command line have been merged in a single
      row as also Firefox 4 hides the statusbar by default now
    * IMPORTANT: By default, we don't change Firefox's default UI anymore!
      This was done since Firefox 4 has indeed a very minimal GUI and the Firefox
      navigation toolbar (with small icons) uses hardly more space than our old status line, but